@@ -22,7 +22,7 @@ class AggregationValidatorTest extends WithDecisionTable {
         final List<ValidationResult> validationResults = testee.apply(modelInstance);
 
         assertEquals(1, validationResults.size());
-        final ValidationResult validationResult = validationResults.get(0);
+        final ValidationResult validationResult = validationResults.getFirst();
         assertAll(
                 () -> assertEquals("Aggregations are only valid with HitPolicy COLLECT", validationResult.getMessage()),
                 () -> assertEquals(decisionTable, validationResult.getElement()),
