@@ -22,7 +22,7 @@ class DecisionIdAndNameValidatorTest extends WithDecisionTable {
         final List<ValidationResult> validationResults = testee.apply(modelInstance);
 
         assertEquals(1, validationResults.size());
-        final ValidationResult validationResult = validationResults.get(0);
+        final ValidationResult validationResult = validationResults.getFirst();
         assertAll(
                 () -> assertEquals("A decision has no id.", validationResult.getMessage()),
                 () -> assertEquals(decision, validationResult.getElement()),
@@ -37,7 +37,7 @@ class DecisionIdAndNameValidatorTest extends WithDecisionTable {
         final List<ValidationResult> validationResults = testee.apply(modelInstance);
 
         assertEquals(1, validationResults.size());
-        final ValidationResult validationResult = validationResults.get(0);
+        final ValidationResult validationResult = validationResults.getFirst();
         assertAll(
                 () -> assertEquals("A decision has no name.", validationResult.getMessage()),
                 () -> assertEquals(decision, validationResult.getElement()),
