@@ -60,7 +60,7 @@ class DuplicateRuleValidatorTest extends WithDecisionTable {
         final List<ValidationResult> validationResults = testee.apply(modelInstance);
 
         assertEquals(1, validationResults.size());
-        final ValidationResult validationResult = validationResults.get(0);
+        final ValidationResult validationResult = validationResults.getFirst();
         assertAll(
                 () -> assertEquals("Rule is defined more than once", validationResult.getMessage()),
                 () -> assertEquals(rule2, validationResult.getElement()),
