@@ -30,7 +30,7 @@ class KnowledgeSourceIdAndNameValidatorTest extends WithDecisionTable {
         final List<ValidationResult> validationResults = testee.apply(modelInstance);
 
         assertEquals(1, validationResults.size());
-        final ValidationResult validationResult = validationResults.get(0);
+        final ValidationResult validationResult = validationResults.getFirst();
         assertAll(
                 () -> assertEquals("A knowledge source has no id.", validationResult.getMessage()),
                 () -> assertEquals(knowledgeSource, validationResult.getElement()),
@@ -45,7 +45,7 @@ class KnowledgeSourceIdAndNameValidatorTest extends WithDecisionTable {
         final List<ValidationResult> validationResults = testee.apply(modelInstance);
 
         assertEquals(1, validationResults.size());
-        final ValidationResult validationResult = validationResults.get(0);
+        final ValidationResult validationResult = validationResults.getFirst();
         assertAll(
                 () -> assertEquals("A knowledge source has no name.", validationResult.getMessage()),
                 () -> assertEquals(knowledgeSource, validationResult.getElement()),
